# LandingImitator

./: .gitignore  LandingImitator.pro
Imitator/: CMakeLists.txt  Imitator.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
Imitator/ProtocolPriFolder/: protocol.h  protocolPri.pri
Imitator/main/: main.cpp
Imitator/mainWindow/: mainwindow.cpp  mainwindow.h
Imitator/src/: TravelAirplane.cpp  TravelAirplane.h
Imitator/src/main/: Main.cpp  main.cpp
Imitator/src/mainWindow/: MainWindow.cpp  MainWindow.h  MainWindow.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
Imitator/src/travelAirplane/: TravelAirplane.cpp  TravelAirplane.h
Indicator/: CMakeLists.txt  GridItem.cpp  GridItem.h  GridScene.cpp  GridScene.h  Indicator.pro  MainWindow.cpp  MainWindow.h  MainWindow.ui  MyScene.cpp  MyScene.h  MyView.cpp  MyView.h  View.cpp  View.h  graphitem.cpp  graphitem.h  graphitemGrid.cpp  graphitemGrid.h  graphitemNet.cpp  graphitemNet.h  graphscene.cpp  graphscene.h  graphview.cpp  graphview.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  protocol.h
Indicator/itemEllipse/: ItemEllipse.cpp  ItemEllipse.h
Indicator/itemText/: ItemText.cpp  ItemText.h
Indicator/mainWindow/: MainWindow.cpp  MainWindow.h
Indicator/scene/: MyScene.cpp  MyScene.h
Indicator/src/: AirplaneItemListView.cpp  AirplaneItemListView.h
Indicator/src/airplane/: Airplane.cpp  Airplane.h
Indicator/src/itemEllipse/: ItemEllipse.cpp  ItemEllipse.h
Indicator/src/itemText/: ItemText.cpp  ItemText.h
Indicator/src/main/: Main.cpp
Indicator/src/mainWindow/: MainWindow.cpp  MainWindow.h  MainWindow.ui
Indicator/src/modalInfoWindow/: ModalInfoWindow.cpp  ModalInfoWindow.h  ModalInfoWindow.ui
Indicator/src/scene/: MyScene.cpp  MyScene.h
Indicator/src/view/: MyView.cpp  MyView.h
Indicator/view/: MyView.cpp  MyView.h
ProtocolFolder/: ProtocolLib.pri  protocol.h
ProtocolPriFolder/: protocol.cpp  protocol.h
